# motion_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: initial_configuration.yaml  oscbf_params.yaml
include/mmc_qp_utils/: mmc_qp_builder.hpp
include/oscbf_utils/: oscbf_params.hpp  oscbf_qp_builder.hpp  osqp_solver_oscbf.hpp
include/qp_solver/: osqp_solver.hpp
launch/: fr3_tsmc_mmc_qp.launch.py  fr3_tsmc_oscbf.launch.py  task_space_motion_control.launch.py  visualize_franka.launch.py
rviz/: fr3_motion_control.rviz
screw_lists/: fr3_body_screws.yaml
src/: motion_reference_generator.cpp  osqp_solver.cpp  osqp_solver_oscbf.cpp  task_space_motion_control.cpp  task_space_motion_control_oscbf.cpp  task_space_motion_control_rrmc.cpp
